# all

./: 2.ipynb  2d.c  5a.c  CHROME.HTML  CMakeLists.txt  NBD.csv  PermutationTutorial.docx  Untitled-1.ipynb  Untitled.ipynb  app.py  armstrong.c  array.c  array1.c  arth.c  bank.c  book.c  bubbling.html  calc.c  calculator.html  comp.c  conditional.c  conditonal1.c  converter.c  currency.c  descision tree.ipynb  elecbill.c  event.html  example.c  example.db  factorial.c  fibonacci.c  file.c  file1.c  fileopen.c  filewrite.c  float.c  for.c  fullp.c  gcd.c  gpt.c  (+39 more)
.ipynb_checkpoints/: descision tree-checkpoint.ipynb
