cmake_minimum_required(VERSION 3.29)
project(Ctutorialsyt)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ctutorialsyt
    array.c
    array1.c
    comp.c
    conditional.c
    conditonal1.c
    example.c
    factorial.c
    float.c
    gpt.c
    hello.c
    hello1.c
    helo.cpp
    pro2.c
    root.c
    sum.c)
